# hawk

./: .coverage  .dockerignore  AIDA.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yaml
src/hawk/: cli.py
src/hawk/core/: hawk.py  keygen.py  sign.py  verify.py
src/hawk/utils/: bitpack.py  fft.py  gr.py  samplers.py
src/webui/: app.py  index.html
tests/: test_GR.py  test_Keysignverify.py  test_bitpack.py  test_cli.py  test_webui.py
