[project]
name = "hawk"
version = "0.1.0"
description = "Implementation of HAWK Post-Quantum Cryptographic Algorithm"
authors = [
    {name = "rogue0xbyte"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography (>=46.0.3,<47.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "fastapi (>=0.124.0,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "httpx (>=0.28.1,<0.29.0)"
]


[project.scripts]
hawk = "hawk.cli:main"
webui = "webui.app:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]